@@ -31,7 +31,7 @@ EXAMPLE1
      print "Count of Czech CPAN authors: $count\n";
 
      # Output:
-     # Count of Czech CPAN authors: 40
+     # Count of Czech CPAN authors: 42
 
 EXAMPLE2
      use strict;
@@ -52,45 +52,47 @@ EXAMPLE2
      # Output:
      # [
      #     [0]  "CHOROBA",
-     #     [1]  "DANIELR",
-     #     [2]  "DANPEDER",
-     #     [3]  "DOUGLISH",
-     #     [4]  "HIHIK",
-     #     [5]  "HOLCAPEK",
-     #     [6]  "HPA",
-     #     [7]  "JANPAZ",
-     #     [8]  "JANPOM",
-     #     [9]  "JENDA",
-     #     [10] "JIRA",
-     #     [11] "JSPICAK",
-     #     [12] "KLE",
-     #     [13] "KOLCON",
-     #     [14] "MAJLIS",
-     #     [15] "MICHALS",
-     #     [16] "MILSO",
-     #     [17] "MJFO",
-     #     [18] "PAJAS",
-     #     [19] "PASKY",
-     #     [20] "PCIMPRICH",
-     #     [21] "PEK",
-     #     [22] "POPEL",
-     #     [23] "PSME",
-     #     [24] "RUR",
-     #     [25] "RVASICEK",
-     #     [26] "SARFY",
-     #     [27] "SEIDLJAN",
-     #     [28] "SKIM",
-     #     [29] "SMRZ",
-     #     [30] "STRAKA",
-     #     [31] "TKR",
-     #     [32] "TRIPIE",
-     #     [33] "TYNOVSKY",
-     #     [34] "VARISD",
-     #     [35] "VASEKD",
-     #     [36] "YENYA",
-     #     [37] "ZABA",
-     #     [38] "ZEMAN",
-     #     [39] "ZOUL"
+     #     [1]  "CONTYK",
+     #     [2]  "DANIELR",
+     #     [3]  "DANPEDER",
+     #     [4]  "DOUGLISH",
+     #     [5]  "HIHIK",
+     #     [6]  "HOLCAPEK",
+     #     [7]  "HPA",
+     #     [8]  "JANPAZ",
+     #     [9]  "JANPOM",
+     #     [10]  "JENDA",
+     #     [11] "JIRA",
+     #     [12] "JSPICAK",
+     #     [13] "KLE",
+     #     [14] "KOLCON",
+     #     [15] "MAJLIS",
+     #     [16] "MICHALS",
+     #     [17] "MILSO",
+     #     [18] "MJFO",
+     #     [19] "PAJAS",
+     #     [20] "PASKY",
+     #     [21] "PCIMPRICH",
+     #     [22] "PEK",
+     #     [23] "PETRIS",
+     #     [24] "POPEL",
+     #     [25] "PSME",
+     #     [26] "RUR",
+     #     [27] "RVASICEK",
+     #     [28] "SARFY",
+     #     [29] "SEIDLJAN",
+     #     [30] "SKIM",
+     #     [31] "SMRZ",
+     #     [32] "STRAKA",
+     #     [33] "TKR",
+     #     [34] "TRIPIE",
+     #     [35] "TYNOVSKY",
+     #     [36] "VARISD",
+     #     [37] "VASEKD",
+     #     [38] "YENYA",
+     #     [39] "ZABA",
+     #     [40] "ZEMAN",
+     #     [41] "ZOUL"
      # ]
 
 DEPENDENCIES
