@@ -40,22 +40,23 @@ p @ids;
 #     [20] "PASKY",
 #     [21] "PCIMPRICH",
 #     [22] "PEK",
-#     [23] "POPEL",
-#     [24] "PSME",
-#     [25] "RUR",
-#     [26] "RVASICEK",
-#     [27] "SARFY",
-#     [28] "SEIDLJAN",
-#     [29] "SKIM",
-#     [30] "SMRZ",
-#     [31] "STRAKA",
-#     [32] "TKR",
-#     [33] "TRIPIE",
-#     [34] "TYNOVSKY",
-#     [35] "VARISD",
-#     [36] "VASEKD",
-#     [37] "YENYA",
-#     [38] "ZABA",
-#     [39] "ZEMAN",
-#     [40] "ZOUL"
+#     [23] "PETRIS",
+#     [24] "POPEL",
+#     [25] "PSME",
+#     [26] "RUR",
+#     [27] "RVASICEK",
+#     [28] "SARFY",
+#     [29] "SEIDLJAN",
+#     [30] "SKIM",
+#     [31] "SMRZ",
+#     [32] "STRAKA",
+#     [33] "TKR",
+#     [34] "TRIPIE",
+#     [35] "TYNOVSKY",
+#     [36] "VARISD",
+#     [37] "VASEKD",
+#     [38] "YENYA",
+#     [39] "ZABA",
+#     [40] "ZEMAN",
+#     [41] "ZOUL"
 # ]
