@@ -11,7 +11,7 @@ my @ret = $obj->id;
 my @right_ret = ('CHOROBA', 'CONTYK', 'DANIELR', 'DANPEDER', 'DOUGLISH',
 	'HIHIK', 'HOLCAPEK', 'HPA', 'JANPAZ', 'JANPOM', 'JENDA', 'JIRA',
 	'JSPICAK', 'KLE', 'KOLCON', 'MAJLIS', 'MICHALS', 'MILSO', 'MJFO',
-	'PAJAS', 'PASKY', 'PCIMPRICH', 'PEK', 'POPEL', 'PSME', 'RUR',
+	'PAJAS', 'PASKY', 'PCIMPRICH', 'PEK', 'PETRIS', 'POPEL', 'PSME', 'RUR',
 	'RVASICEK', 'SARFY', 'SEIDLJAN', 'SKIM', 'SMRZ', 'STRAKA', 'TKR',
 	'TRIPIE', 'TYNOVSKY', 'VARISD', 'VASEKD', 'YENYA', 'ZABA', 'ZEMAN',
 	'ZOUL');
