@@ -1,4 +1,5 @@
 0.29
+ - Add PETRIS CPAN account.
 
 0.28 2021-03-19T18:08:11+01:00
  - Add CONTYK CPAN account.
